# fastapi_template

./: .env.example  .flake8  .gitignore  Dockerfile  database.py  docker-compose.yml  main.py  pyproject.toml
app/models/: __init__.py  mixins.py  sample_model.py
app/repositories/: __init__.py  sample_repository.py
app/routers/: sample_router.py
app/schemas/: sample_schema.py
app/services/: __init__.py  sample_service.py  test_class_service.py  test_service.py
data/: binlog.000013  binlog.000014  binlog.000015
data/#innodb_temp/: temp_1.ibt  temp_10.ibt  temp_2.ibt  temp_3.ibt  temp_4.ibt  temp_5.ibt  temp_6.ibt  temp_7.ibt  temp_8.ibt  temp_9.ibt
data/fun_relations/: samples.ibd
docs/ER/: matching_to_sample.md
migrations/: env.py
migrations/versions/: bd291b631b47_.py
